--- a/Homepage.css
+++ b/Homepage.css
@@ -1,12 +1,19 @@
 body{
     margin: 20px;
-    background-color: antiquewhite;
+    background-color:rgba(16, 233, 222, 0);
 }
 
 .header{
-    background-color: aqua;
-    color: darkorchid;
+    color: rgb(31, 165, 206);
     padding: 10px;
     text-align: center;
     margin-bottom: 20px;
 }
+
+.text{
+    padding: 20px;
+    text-align: center;
+    color: rgb(31, 165, 206);
+}
+
+
