--- a/Homepage.css
+++ b/Homepage.css
@@ -4,16 +4,17 @@ body{
 }
 
 .header{
-    color: rgb(31, 165, 206);
+    color: rgb(10, 70, 88);
     padding: 10px;
     text-align: center;
     margin-bottom: 20px;
+    background-color: rgb(158, 213, 226);
 }
 
-.text{
-    padding: 20px;
-    text-align: center;
-    color: rgb(31, 165, 206);
+.column{
+    padding-left: 700px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: rgb(10, 70, 88);
+    background-color: rgb(158, 213, 226);
 }
-
-
